2009-09-15  Charles Wilson  <cwilso11@users.sourceforge.net>

	Package 0.44-1-mingw32 fixes.
	* pexports.c (main): Fix typo in usage statement.
	* pexports.h: Ensure ULONGLONG is defined.
	* Makefile: Force use of flex and bison, not lex and yacc.

2008-08-31  Tor Lillqvist  <tml@novell.com>

	Release 0.44. Add support for 64-bit executables.
	* hlex.l
	* hparse.y
	* pexports.h
	* pexports.c
	* str_tree.h
	* str_tree.c: Handle also 64-bit executables. Make it work also if
	built as 64-bit code. Remove all gcc -Wall warnings. Make it
	compilable also with MSVC. Disable Wow64 file system redirection
	when running as a 32-bit process on 64-bit Windows. Bump version
	to 0.44.
	* Makefile: New.
	* pe.h: Not needed, removed.
	* hparse.h: Remove generated file.
	* Makefile.am: Removed.

2002-11-08  Luke Dunstan  <infidel@users.sourceforge.net>

	* pexports.c (dump_exports): fix exports incorrectly
	determined to be forwarders.

1999-04-02  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* pexports.c: now distinguishes data/non-data symbols,
	depending on type of section symbol in
	* pexports.c: in verbose mode prints section name for symbol
	* pexports.c: file offsets are now in hex

1998-11-07  Anders Norlander  <kv98anr@cs.umu.se>

	* hparse.y: types and parameters are now recognized as
	a series of tokens, which means that keywords like const
	struct and so on are not recognized as such, allowing any
	kind of parameter, including function pointers.

1998-11-05  Anders Norlander  <kv98anr@cs.umu.se>

	* hlex.l: removed all tokens except ID, CONST and VOLATILE
	* hparse.y: Added INC_ARGS macro to increment arg_size only if
	new flag inc_flag is set
	* hparse.y: Added function_pointer and function_pointer_name rules
	* hparse.y: Function attributes are now handled as list of ID's
	* pexports.h: Incremented VER_MINOR
	* pexports.c: Print name of file if a header is not found
	* pexports.c: Separated printing to function dump_symbol